product_docs/docs/warehousepg/7.3/install_guide/install_whpg.mdx
---
title: Installing EDB Postgres AI for WarehousePG
navTitle: Installing WarehousePG
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/docs/7x/install_guide/install_whpg.md
editTarget: originalFilePath

---

WarehousePG software is a downloadable package that you install on each host system using your operating system's package management system. You must install WarehousePG on each host machine of the WarehousePG cluster. 

Perform the following tasks in order: 

1.  [Install EDB Postgres AI for WarehousePG](#installing-edb-postgres-ai-for-warehousepg)
2.  [Enable passwordless SSH](#enabling-passwordless-ssh)
3.  [Verify your installation](#verifying-your-installation)

Before you begin installing WarehousePG, be sure you have completed the steps in [Configure operating system](config_os.mdx) to configure each of the coordinator, standby coordinator, and segment host machines for WarehousePG.

!!! Important

    You require sudo or root user access to install from a pre-built RPM file.

## Installing EDB Postgres AI for WarehousePG

To install, you will need an EDB Repos 2.0 token to gain access to the EDB private software repositories. 
For instructions on obtaining this token, see: [Get your token](/repos/getting_started/with_web/get_your_token/). 

Save the EDB Subscription token in an environment variable:

```bash
export EDB_SUBSCRIPTION_TOKEN=<your-token>
```

Run the following command to add the EDB repository to your system:

```bash
curl -1sSLf "https://downloads.enterprisedb.com/$EDB_SUBSCRIPTION_TOKEN/gpsupp/setup.rpm.sh" | sudo -E bash
```

Install the EPEL repository and warehouse-pg packages according to your operating system:

<TabContainer>

<Tab title="RHEL/CentOS 8" active>

```bash
sudo dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
sudo dnf install -y warehouse-pg-7 warehouse-pg-clients whpg-backup
```

</Tab>


<Tab title="RHEL/CentOS 9" active>

```bash
sudo dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm
sudo dnf install -y warehouse-pg-7 warehouse-pg-clients whpg-backup
```

</Tab>


</TabContainer>

Change the owner and group of the installed files to `gpadmin`:

```bash
sudo chown -R gpadmin:gpadmin /usr/local/greenplum*
sudo chgrp -R gpadmin /usr/local/greenplum*
```

## Enabling passwordless SSH

The `gpadmin` user on each WarehousePG host must be able to connect from any host in the cluster to any other host in the cluster without entering a password or passphrase (called "passwordless SSH"). If you enable passwordless SSH from the coordinator host to every other host in the cluster ("1-*n* passwordless SSH"), you can use the WarehousePG `gpssh-exkeys` command-line utility to enable passwordless SSH from every host to every other host ("*n*-*n* passwordless SSH").

1.  Log in to the coordinator host as the `gpadmin` user.

2.  Source the `path` file in the WarehousePG installation directory.

    ```bash
    source /usr/local/greenplum-db-<version>/greenplum_path.sh
    ```

    !!! Note

        Add the above `source` command to the `gpadmin` user's `.bashrc` or other shell startup file so that the WarehousePG path and environment variables are set whenever you log in as `gpadmin`.

3.  Use the `ssh-copy-id` command to add the `gpadmin` user's public key to the `authorized_hosts` SSH file on every other host in the cluster.

    ```bash
    ssh-copy-id scdw
    ssh-copy-id sdw1
    ssh-copy-id sdw2
    ssh-copy-id sdw3
    . . .
    ```

    This enables 1-*n* passwordless SSH. You will be prompted to enter the `gpadmin` user's password for each host. If you have the `sshpass` command on your system, you can use a command like the following to avoid the prompt.

    ```bash
    SSHPASS=<password> sshpass -e ssh-copy-id scdw
    ```

4.  In the `gpadmin` home directory, create a file named `hostfile_exkeys` that has the machine configured host names and host addresses (interface names) for each host in your WarehousePG cluster (coordinator, standby coordinator, and segment hosts). Make sure there are no blank lines or extra spaces. Check the `/etc/hosts` file on your systems for the correct host names to use for your environment. For example, if you have a coordinator, standby coordinator, and three segment hosts with two unbonded network interfaces per host, your file would look something like this:

    ```
    cdw
    cdw-1
    cdw-2
    scdw
    scdw-1
    scdw-2
    sdw1
    sdw1-1
    sdw1-2
    sdw2
    sdw2-1
    sdw2-2
    sdw3
    sdw3-1
    sdw3-2
    ```

5.  Run the `gpssh-exkeys` utility with your `hostfile_exkeys` file to enable *n*-*n* passwordless SSH for the `gpadmin` user.

    ```
    gpssh-exkeys -f hostfile_exkeys
    ```

## Verifying your installation

To make sure the WarehousePG software was installed and configured correctly, run the following confirmation steps from your WarehousePG coordinator host. If necessary, correct any problems before continuing on to the next task.

1.  Log in to the coordinator host as `gpadmin`:

    ```bash
    su - gpadmin
    ```

2.  Use the `gpssh` utility to see if you can log in to all hosts without a password prompt, and to confirm that the WarehousePG software was installed on all hosts. Use the `hostfile_exkeys` file you used to set up passwordless SSH. For example:

    ```bash
    gpssh -f hostfile_exkeys -e 'ls -l /usr/local/greenplum-db-<version>'
    ```

    If the installation was successful, you should be able to log in to all hosts without a password prompt. All hosts should show that they have the same contents in their installation directories, and that the directories are owned by the `gpadmin` user.

    If you are prompted for a password, run the following command to redo the ssh key exchange:

    ```bash
    gpssh-exkeys -f hostfile_exkeys
    ```

### WarehousePG installation files and directories

The following files and directories are included with your WarehousePG installation:

-   `greenplum_path.sh` — This file contains the environment variables for WarehousePG. See [Setting WarehousePG environment variables](init_whpg.mdx#topic8).
-   **bin** — This directory contains the WarehousePG management utilities. This directory also contains the PostgreSQL client and server programs, most of which are also used in WarehousePG.
-   **docs/cli_help** — This directory contains help files for WarehousePG command-line utilities.
-   **docs/cli_help/gpconfigs** — This directory contains sample `gpinitsystem` configuration files and host files that can be modified and used when installing and initializing WarehousePG.
-   **ext** — Bundled programs (such as Python) used by some WarehousePG utilities.
-   **include** — The C header files for WarehousePG.
-   **lib** — WarehousePG and PostgreSQL library files.
-   **sbin** — Supporting/Internal scripts and programs.
-   **share** — Shared files for WarehousePG.

## Next steps

Perform the following steps once your installation of WarehousePG is complete: 

-   [Create the data storage areas](create_data_dirs.mdx)
-   [Validate the WHPG cluster](validate.mdx)
-   [Initialize WarehousePG](init_whpg.mdx)
